# blood_audit

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-docs.yml
.impeccable/critique/: 2026-06-03T23-39-07Z__review-html.md  2026-06-04T00-09-29Z__review-html.md  2026-06-04T00-26-08Z__review-html.md  2026-06-04T00-53-07Z__review-html.md  2026-06-04T00-54-36Z__review-html.md
docs/: .gitignore  CONTEXT.md  administration-confirmation-plan.md  astro.config.mjs  declared-usetype-plan.md  handoff-hb-anchor-unification.md  ingest-mapping.md  missing-hb-periop-pre-pass-plan.md  msbos-returns-annotation-plan.md  package-lock.json  package.json  report-schema.md  source_mapping_design.md  transfusion-policy-application-plan.md
docs/public/: index.html
docs/src/components/: AlgorithmDecisionFlow.astro  AtAGlance.astro  AudienceTiles.astro  CliCommandCard.astro  EnvVarChecklist.astro  HbTierMatrix.astro  IntegrationSeamCard.astro  PipelineDiagram.astro  QiNotSamdBanner.astro  QuoteGroundingLayers.astro
docs/src/styles/: custom.css
migrations/: env.py
migrations/versions/: a1c2e3f4b5d6_audit_pipeline_batch_runs.py  cfb3b5460004_initial_review_actions_and_phi_access_.py
scripts/: build_opbloodlimit_reference.py  build_oprtact_icd9_bridge.py  create_issues.sh  ralph_ticket.sh
scripts/pilot/: README.md  _anchor_candidates.py  _bdvsttrans_source.py  _hosxp_dt.py  _periop_notes.py  build_review.py  fix_reasoning_split.py  html_decode_hn_an.py  msbos_name_match_study.py  msbos_reservation_pilot_report.py  notes_surgical_context.py  offline_reapply.py  preflight_declared_usetype.py  preflight_returns_validation.py  rank_doctors.py  reconcile_verdict_sources.py  reverse_lookup_phi.py  run_llm_leg.py  run_pipeline.py  sample_bundle.py
src/bba/: __init__.py  declared_use.py  feature_flags.py
src/bba/attribution/: __init__.py  csv_support.py  dct_registry.py  lab_stats.py  models.py  order_doctor_map.py  outputs.py  pipeline.py  ranking.py  resolvers.py  scorecards.py  verdicts.py
src/bba/audit_orders/: __init__.py  anchor.py  exceptions.py  identity.py  models.py  pipeline.py  rules.py
src/bba/audit_pipeline/: __init__.py  bleeding.py  cost_guard.py  exceptions.py  models.py  pipeline.py  replay.py  resume.py  state_machine.py  store.py
src/bba/audit_store/: __init__.py  cold_storage.py  exceptions.py  models.py  snapshot.py  store.py
src/bba/cli/: __init__.py  _logging.py  audit_run_store.py  exceptions.py  identity.py  main.py  models.py  phi_scrubber.py  store_protocol.py
src/bba/cohort_detector/: __init__.py  detector.py  models.py  rules.py
src/bba/component_map/: __init__.py  families.py
src/bba/confidence_calibrator/: __init__.py  agreement.py  ece.py  exceptions.py  isotonic.py  models.py  reliability.py
src/bba/dashboard/: __init__.py  app.py  exceptions.py  models.py
src/bba/deid_redactor/: __init__.py  age.py  canonical.py  date_shift.py  exceptions.py  k_anonymity.py  models.py  phi_patterns.py  redactor.py  roles.py  semantic.py
src/bba/deterministic_classifier/: __init__.py  classifier.py  crystalloid.py  models.py  procedure_filter.py  rationales.py
src/bba/eval_harness/: __init__.py  agreement.py  classifier.py  cluster.py  correction.py  exceptions.py  falsification.py  intervals.py  models.py  reweight.py  sampling.py  splits.py
src/bba/evidence_bundle_builder/: __init__.py  builder.py  canonical.py  exceptions.py  models.py  ranking.py  salience.py
src/bba/hb_lookup/: __init__.py  anchor.py  lookup.py  models.py  parse.py
src/bba/ingest/: __init__.py  tz.py  (+10 more)
src/blood_audit/: __init__.py
tests/unit/: test_administration.py  test_anchor_resolve.py  test_attribution.py  test_audit_orders.py  test_audit_pipeline.py  test_audit_pipeline_postgres.py  test_audit_store.py  test_bdvsttrans_source.py  test_bleeding.py  test_build_audit_row_precedence.py  test_cli.py  test_cohort_detector.py  test_component_map.py  test_confidence_calibrator.py  test_dashboard.py  test_declared_use.py  test_deid_redactor.py  test_deterministic_classifier.py  test_deterministic_marker_annotation.py  test_eval_harness.py  test_evidence_anchor.py  test_evidence_bundle_builder.py  test_feature_flags.py  test_hb_lookup.py  test_hemodynamic.py  test_ingest.py  test_llm_client.py  test_marker_planned_op_provenance.py  test_monitoring.py  test_over_reservation_persist.py  test_periop.py  test_pilot_build_review.py  test_pilot_build_review_picker_v2.py  test_pilot_declared_usetype.py  test_pilot_icd9_dict.py  test_pilot_llm_leg_returns.py  test_pilot_msbos_name_match_study.py  test_pilot_msbos_name_match_study_tier2.py  test_pilot_msbos_reservation.py  test_pilot_msbos_reservation_report.py  (+39 more)
(+145 files in other folders)
