[project]
name = "blood-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "pandera[pandas]>=0.31.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "reportlab>=4.5.1",
]

[project.scripts]
blood-audit = "blood_audit:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# uv_build's default infers the wheel module from the project name (blood_audit).
# We ship two top-level packages under src/, so list both explicitly — otherwise
# `pip install blood-audit` produces a wheel that lacks `bba.ingest`.
module-name = ["bba", "blood_audit"]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
