[project]
name = "blood-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "click>=8.1",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandera[pandas]>=0.31.1",
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "reportlab>=4.5.1",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "typing-extensions>=4.12",
    "uvicorn>=0.30",
]

[project.scripts]
bba = "bba.cli.main:cli"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# uv_build's default infers the wheel module from the project name (blood_audit),
# but we ship the package under src/ as `bba`, not `blood_audit`. Name it
# explicitly so the wheel contains `bba.*` (e.g. `bba.ingest`); without this the
# default inference would look for a `blood_audit` module that no longer exists.
module-name = ["bba"]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "testcontainers[postgres]>=4",
    "types-openpyxl>=3.1.5.20260518",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
# Enable --strict-equivalent settings by default. src/ is type-clean under
# strict; making it the configured default closes the gap between the CI
# job's "src strict" label and what `uv run mypy src` actually checks
# (Codex review of PR #57: a bare `mypy src` accepts untyped defs and
# unchecked Any access, so the gate did not enforce the contract it
# advertised). Per-file overrides below opt specific modules out.
strict = true

[[tool.mypy.overrides]]
# reportlab does not ship PEP 561 type stubs and has no maintained
# types-reportlab package on PyPI. The report_generator's reportlab usage
# is confined to pdf_writer.py and is covered by an integration test
# (magic-bytes + size); silencing the imports here keeps mypy --strict
# green for the rest of the package.
module = ["reportlab.*"]
ignore_missing_imports = true
